# mistral-ai

./:  LICENSE  .env.sample  .gitignore  LICENSE  README.md  Society5.0の実現に向けた科学技術・イノベーション政策.md  ocr.py  pyproject.toml
src/: conv_markdown.py  lag_pinecone.py  ocr.py  qa_app.py
