[project]
name = "mistral-ocr-tool"
version = "0.1.0"
description = "Mistral OCR APIを利用したPDF文書処理ツール"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mistralai>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic-core>=2.16.3"
]

[project.scripts]
mistral-ocr = "ocr:main"

[tool.setuptools]
packages = ["src"]
include-package-data = true 